Concertando e Refatorando os endpoints de POST em UsusarioController e ViagemController